[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dehashed-cli"
version = "2.0.0"
description = "Command-line client for the DeHashed v2 API — search any field, paginate, and export as table/JSON/CSV/combolists."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "BLTSEC" }]
keywords = ["dehashed", "osint", "breach", "credentials", "security", "pentest"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/BLTSEC/Dehashed"
Issues = "https://github.com/BLTSEC/Dehashed/issues"

[project.scripts]
dehashed = "dehashed:cli"

[tool.setuptools]
py-modules = ["dehashed"]
